--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
